yamls/user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userjava-deployment
  namespace: api
  labels:
    app: userjava
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userjava
  template:
    metadata:
      labels:
        app: userjava
    spec:
      containers:
      - name: userjava
        image: registrytgl5512.azurecr.io/user-java:1
        volumeMounts:
            - name: 'azure-kvname-user-msi'
              mountPath: '/mnt/secrets-store'
              readOnly: true
      volumes:
        - name: azure-kvname-user-msi
          csi:
            driver: 'secrets-store.csi.k8s.io'
            readOnly: true
            volumeAttributes:
              secretProviderClass: 'azure-kvname-user-msi'
