yamls/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  namespace: api
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: registrytgl5512.azurecr.io/userprofile:latest
