yamls/trips-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trips-service
  labels:
    app: trips
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: trips
