yamls/tripviewer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripviewer-service
  labels:
    app: tripviewer
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: tripviewer
