yamls/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    run: user
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: user
