yamls/userjava-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userjava-service
  labels:
    run: userjava
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: userjava
